--- a/apps/default/home/templates/home/includes/post-vimeo.html
+++ b/apps/default/home/templates/home/includes/post-vimeo.html
@@ -101,7 +101,7 @@
 
 			<?php if ($post_data['votes'] > 4) { ?>
 				<li class="load-comments">
-					<button onclick="load_tlp_comments(<?php echo $post_data['post_id']; ?>,this);">{{LANG show_more}} Comentarios</button>
+					<button onclick="load_tlp_comments(<?php echo $post_data['post_id']; ?>,this);">Mostrar mas comentarios</button>
 				</li>
 			<?php } ?>
 		</ul>
