--- a/apps/default/main/templates/header/header.html
+++ b/apps/default/main/templates/header/header.html
@@ -38,7 +38,7 @@
                 <?php if (IS_LOGGED && $me['is_pro'] == 0 && $config['pro_system'] == 'on') { ?>
                 <li class="pp_front_menu last_menu" id="go_pro_nav">
                     <a href="{{CONFIG site_url}}/go_pro" data-ajax="ajax_loading.php?app=go_pro&apph=go_pro">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" class="feather feather-compass" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2" style="color: #66757f"></polygon></svg> <span>{{LANG go_pro}}</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" class="feather feather-compass" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2" style="color: #66757f"></polygon></svg> <span>Convierte en profesional</span>
                     </a>
                 </li>
                 <?php } ?>
