--- a/apps/default/notactive/templates/notactive/index.html
+++ b/apps/default/notactive/templates/notactive/index.html
@@ -2,8 +2,8 @@
 	<div class="container">
 		<div class="page-not-found">
 
-			<h3>{{LANG account_not_activated}}</h3>
-			<p>{{LANG click_on_activation_link}}</p>
+			<h3>Su cuenta no está activada.</h3>
+			<p>Haga clic en el enlace de activación que se envió ...</p>
 			<div><a href="<?php echo($config['site_url'].'/signout') ?>">Cerrar sesión</a></div>
 
 		</div>
