--- a/apps/default/settings/templates/settings/includes/business_account.html
+++ b/apps/default/settings/templates/settings/includes/business_account.html
@@ -24,7 +24,7 @@
 					<div class="pp_mat_input">
 						<input type="email" name="email" class="form-control">
 						<span class="bar"></span>
-						<label>{{LANG email}}</label>
+						<label>Email</label>
 					</div>
 				</div>
 			</div>
@@ -40,7 +40,7 @@
 					<div class="pp_mat_input">
 						<input type="url" name="website" class="form-control">
 						<span class="bar"></span>
-						<label>{{LANG website}}</label>
+						<label>Sitio web</label>
 					</div>
 				</div>
 			</div>
