--- a/apps/default/settings/templates/settings/includes/password.html
+++ b/apps/default/settings/templates/settings/includes/password.html
@@ -1,6 +1,6 @@
 <div class="pass-active">
 	<div class="header">
-		<h4>{{LANG change_passwd}}</h4>
+		<h4>Cambiar mi contraseña</h4>
 		<div class="clear"></div>
 	</div>
 	<hr>
@@ -11,20 +11,20 @@
 		<div class="pp_mat_input">
 			<input required="true" type="password" name="old_password" class="form-control">
 			<span class="bar"></span>
-			<label>{{LANG old_passwd}}*</label>
+			<label>Contraseña anterior*</label>
 		</div>
 		<?php } ?>
 		<div class="pp_mat_input">
 			<input required="true" type="password" name="new_password" class="form-control">
 			<span class="bar"></span>
-			<label>{{LANG new_passwd}}*</label>
+			<label>Nueva contraseña*</label>
 		</div>
 		<div class="pp_mat_input">
 			<input required="true" type="password" name="conf_password" class="form-control">
 			<span class="bar"></span>
-			<label>{{LANG conf_new_passwd}}*</label>
+			<label>Confirmar nueva contraseña*</label>
 		</div>
-		<div class="pp_load_loader"><button class="btn btn-info pp_flat_btn" type="submit"><span>{{LANG save_changes}}</span></button></div>
+		<div class="pp_load_loader"><button class="btn btn-info pp_flat_btn" type="submit"><span>Guardar cambios</span></button></div>
 		<input type="hidden" name="user_id" value="<?php echo($context['me']['user_id']) ?>">
 		<input type="hidden" name="hash" value="<?php echo($context['csrf_token']) ?>">
 		</div>
