--- a/apps/default/ads/templates/ads/wallet.html
+++ b/apps/default/ads/templates/ads/wallet.html
@@ -160,7 +160,7 @@ $(document).ready(function() {
 		}
 		else{
 			scroll2top();
-			$.toast("{{LANG please_check_details}}",{
+			$.toast("¡Por favor comprueba tus detalles!",{
             	duration: 5000, 
             	type: 'success',
             	align: 'bottom',
@@ -184,7 +184,7 @@ $(document).ready(function() {
 		}
 		else{
 			scroll2top();
-			$.toast("{{LANG please_check_details}}",{
+			$.toast("¡Por favor comprueba tus detalles!",{
             	duration: 5000, 
             	type: 'success',
             	align: 'bottom',
@@ -230,7 +230,7 @@ $(document).ready(function() {
         }
 		else{
 			scroll2top();
-			$.toast("{{LANG please_check_details}}",{
+			$.toast("¡Por favor comprueba tus detalles!",{
             	duration: 5000, 
             	type: 'success',
             	align: 'bottom',
@@ -250,7 +250,7 @@ $(document).ready(function() {
 		}
 		else{
 			scroll2top();
-			$.toast("{{LANG please_check_details}}",{
+			$.toast("¡Por favor comprueba tus detalles!",{
             	duration: 5000, 
             	type: 'success',
             	align: 'bottom',
