--- a/apps/default/home/templates/home/includes/post-playtube.html
+++ b/apps/default/home/templates/home/includes/post-playtube.html
@@ -45,7 +45,7 @@
 				<?php } ?>
 			  	<li onclick="embed_post(<?php echo $post_data['post_id']; ?>,this);">
 			  		<a href="javascript:void(0);">
-			  			{{LANG embed}}
+			  			Integrar
 			  		</a>
 			  	</li>
 			    <li>
@@ -101,7 +101,7 @@
 
 			<?php if ($post_data['votes'] > 4) { ?>
 				<li class="load-comments">
-					<button onclick="load_tlp_comments(<?php echo $post_data['post_id']; ?>,this);">{{LANG show_more}} Comentarios</button>
+					<button onclick="load_tlp_comments(<?php echo $post_data['post_id']; ?>,this);">Mostrar mas comentarios</button>
 				</li>
 			<?php } ?>
 		</ul>
