--- a/apps/default/home/templates/home/includes/upload-image.html
+++ b/apps/default/home/templates/home/includes/upload-image.html
@@ -3,7 +3,7 @@
 		<img src="{{ME avatar}}" class="img-circle">
 		<span>{{ME username}}</span>
 		<svg class="feather feather-arrow" width="18" height="18" viewBox="0 0 48 48" fill="#757575"><path d="M20 34l10-10 -10-10z"></path></svg>
-		<span class="pp_area"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-image"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect><circle cx="8.5" cy="8.5" r="1.5"></circle><polyline points="21 15 16 10 5 21"></polyline></svg> {{LANG image}}</span>
+		<span class="pp_area"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-image"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect><circle cx="8.5" cy="8.5" r="1.5"></circle><polyline points="21 15 16 10 5 21"></polyline></svg> Imagen</span>
 		<div id="pp_loader">
 			<span style="float:left;margin-right:60px;margin-top:-10px;">0%</span>
 			<div class="speeding_wheel"></div>
