--- a/apps/default/main/templates/footer/footer.html
+++ b/apps/default/main/templates/footer/footer.html
@@ -6,7 +6,7 @@
 				<li><a href="<?php echo(pxp_link('terms-of-use')) ?>" data-ajax="ajax_loading.php?app=terms&apph=terms&page=terms-of-use">Terminos</a></li>
 				<li><a href="<?php echo(pxp_link('privacy-and-policy')) ?>"  data-ajax="ajax_loading.php?app=terms&apph=terms&page=privacy-and-policy">Privacidad & Política</a></li>
 				<li><a href="<?php echo(pxp_link('about-us')) ?>"  data-ajax="ajax_loading.php?app=terms&apph=terms&page=about-us">Acerca de</a></li>
-				<li><a href="<?php echo(pxp_link('contact_us')) ?>"  data-ajax="ajax_loading.php?app=terms&apph=terms&page=contact_us">{{LANG contact_us}}</a></li>
+				<li><a href="<?php echo(pxp_link('contact_us')) ?>"  data-ajax="ajax_loading.php?app=terms&apph=terms&page=contact_us">Contáctanos</a></li>
 				<?php if ($config['user_ads'] == 'on') { ?>
 					<li><a href="{{CONFIG site_url}}/ads" data-ajax="ajax_loading.php?app=ads&apph=ads">Publicidad</a></li>
 				<?php } ?>
