--- a/apps/default/main/templates/includes/lightbox.html
+++ b/apps/default/main/templates/includes/lightbox.html
@@ -227,7 +227,7 @@
 										<?php } ?>
 										<li onclick="embed_post('<?php echo($context['post_data']['post_id']) ?>',this);">
 									  		<a href="javascript:void(0);">
-									  			{{LANG embed}}
+									  			Insertar
 									  		</a>
 									  	</li>
 									  	<li>
@@ -236,7 +236,7 @@
 									</ul>
 								</div>
 								
-								<span id="lb-copy-post" title="{{LANG copy_link}}">
+								<span id="lb-copy-post" title="Copiar link">
 									<a href="javascript:void(0);" onclick="copyLinkfn();">
 										<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-copy"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg>
 									</a>
@@ -258,7 +258,7 @@
 									<?php } else{ ?>
 										<div class="login-2comment">
 											<a href="<?php echo(pxp_link('welcome')) ?>">Iniciar sesión</a>
-											{{LANG login_to_lc_post}}
+											Dale me gusta o comenta
 										</div>
 									<?php } ?>
 								</div>
