--- a/apps/default/main/templates/modals/block-user.html
+++ b/apps/default/main/templates/modals/block-user.html
@@ -6,7 +6,7 @@
 		</div>
 		<div class="confirm--modal--footer">
 			<button class="btn btn-default" data-confirm--modal-dismiss>Cancelar</button>
-			<button class="btn btn-danger btn-red block--user">{{LANG block}}</button>
+			<button class="btn btn-danger btn-red block--user">Bloquear</button>
 		</div>
 	</div>
 </div>
