--- a/apps/default/main/templates/modals/delete-comment.html
+++ b/apps/default/main/templates/modals/delete-comment.html
@@ -6,7 +6,7 @@
 		</div>
 		<div class="confirm--modal--footer">
 			<button class="btn btn-default" data-confirm--modal-dismiss>Cancelar</button>
-			<button class="btn btn-danger btn-red delete--comment">{{LANG delete}}</button>
+			<button class="btn btn-danger btn-red delete--comment">Borrar</button>
 		</div>
 	</div>
 </div>
@@ -19,7 +19,7 @@
 		</div>
 		<div class="confirm--modal--footer">
 			<button class="btn btn-default" data-confirm--modal-dismiss>Cancelar</button>
-			<button class="btn btn-danger btn-red delete--comment--reply">{{LANG delete}}</button>
+			<button class="btn btn-danger btn-red delete--comment--reply">Borrar</button>
 		</div>
 	</div>
 </div>
