--- a/apps/default/main/templates/modals/delete-post.html
+++ b/apps/default/main/templates/modals/delete-post.html
@@ -6,7 +6,7 @@
 		</div>
 		<div class="confirm--modal--footer">
 			<button class="btn btn-default" data-confirm--modal-dismiss>Cancelar</button>
-			<button class="btn btn-danger btn-red delete--post">{{LANG delete}}</button>
+			<button class="btn btn-danger btn-red delete--post">Borrar</button>
 		</div>
 	</div>
 </div>
