--- a/apps/default/settings/templates/settings/includes/delete.html
+++ b/apps/default/settings/templates/settings/includes/delete.html
@@ -1,8 +1,8 @@
 <div class="delt-active">
 	<div class="header">
-		<h4>{{LANG delete_account}}?</h4>
+		<h4>Borrar cuenta?</h4>
 		<p>
-			{{LANG confirm_del_account}}
+			¿Seguro que quieres eliminar tu cuenta? ¡Todo el contenido, incluidas las publicaciones publicadas, se eliminará de forma permanente!
 		</p>
 		<div class="clear"></div>
 	</div>
@@ -15,7 +15,7 @@
 			<span class="bar"></span>
 			<label>Confirmar contraseña*</label>
 		</div>
-		<div class="pp_load_loader"><button class="btn btn-info pp_flat_btn" type="submit"><span>{{LANG continue}}</span></button></div>
+		<div class="pp_load_loader"><button class="btn btn-info pp_flat_btn" type="submit"><span>Continuar</span></button></div>
 		<input type="hidden" name="user_id" value="<?php echo($context['me']['user_id']) ?>">
 		<input type="hidden" name="hash" value="<?php echo($context['csrf_token']) ?>">
 		</div>
