--- a/apps/default/settings/templates/settings/includes/general.html
+++ b/apps/default/settings/templates/settings/includes/general.html
@@ -1,6 +1,6 @@
 <div class="sett-active">
 	<div class="header">
-		<h4>General {{LANG settings}}</h4>
+		<h4>General</h4>
 		<div class="clear"></div>
 	</div>
 	<hr>
@@ -15,10 +15,10 @@
 		<div class="pp_mat_input" style="margin-bottom: 1.7em;">
 			<input required="true" type="email" name="email" class="form-control" value="<?php echo($context['me']['email']) ?>">
 			<span class="bar"></span>
-			<label>{{LANG email}}*</label>
+			<label>Core*</label>
 		</div>
 		<div class="pp_mat_select">
-			<label class="pp_mat_label">{{LANG gender}}*</label>
+			<label class="pp_mat_label">Género*</label>
 			<div>
 				<select name="gender" class="form-control" required="true">
 					<option value="male" <?php if($context['me']['gender'] == 'male'){ ?> selected <?php } ?>>
@@ -33,7 +33,7 @@
 			<div class="clear"></div>
 		</div>
 		<div class="pp_mat_select">
-			<label class="pp_mat_label">{{LANG country}}</label>
+			<label class="pp_mat_label">País</label>
 			<div>
 				<select name="country" class="form-control">
 					<?php foreach ($context['countries_name'] as $cid => $cname) { ?>
@@ -91,7 +91,7 @@
 			
 		<?php } ?>
 
-		<div class="pp_load_loader"><button class="btn btn-info pp_flat_btn" type="submit"><span>{{LANG save_changes}}</span></button></div>
+		<div class="pp_load_loader"><button class="btn btn-info pp_flat_btn" type="submit"><span>Guardar cambios</span></button></div>
 		<div class="clear"></div>
 		<input type="hidden" name="user_id" value="<?php echo($context['me']['user_id']) ?>">
 		<input type="hidden" name="hash" value="<?php echo($context['csrf_token']) ?>">
