--- a/apps/default/settings/templates/settings/includes/notifications.html
+++ b/apps/default/settings/templates/settings/includes/notifications.html
@@ -1,6 +1,6 @@
 <div class="notification-settings noti-active">
 	<div class="header">
-		<h4>{{LANG notif_settings}}</h4>
+		<h4>Configuración de las notificaciones</h4>
 		<div class="clear"></div>
 	</div>
 	<hr>
@@ -9,11 +9,11 @@
 		<div class="col-md-8">
 		<div class="fluid">
 			<div class="col-md-12">
-				<p><strong>{{LANG receive_notif_when}}:</strong></p>
+				<p><strong>Recibir notificaciones cuando alguien:</strong></p>
 			</div>
 		</div>
 		<div class="form-group">
-			<label class="col-xs-9 col-sm-9 col-md-9">{{LANG liked_my_post}}</label>
+			<label class="col-xs-9 col-sm-9 col-md-9">Me gustó mi publicación</label>
 			<div class="col-xs-3 col-sm-3 col-md-3">
 				<input type="checkbox" <?php if($context['me']['n_on_like']){ ?> checked <?php } ?> class="tgl tgl-ios" id="on_like_post" name="on_like_post">
 				<label class="tgl-btn" for="on_like_post"></label>
@@ -21,7 +21,7 @@
 			<div class="clear"></div>
 		</div>
 		<div class="form-group">
-			<label class="col-xs-9 col-sm-9 col-md-9">{{LANG commented_my_post}}</label>
+			<label class="col-xs-9 col-sm-9 col-md-9">Comentó en mi publicación</label>
 			<div class="col-xs-3 col-sm-3 col-md-3">
 				<input type="checkbox" <?php if($context['me']['n_on_comment']){ ?> checked <?php } ?> class="tgl tgl-ios" id="on_commnet_post" name="on_commnet_post">
 				<label class="tgl-btn" for="on_commnet_post"></label>
@@ -45,7 +45,7 @@
 			<div class="clear"></div>
 		</div>
 		<div class="form-group">
-			<label class="col-xs-9 col-sm-9 col-md-9">{{LANG followed_me}}</label>
+			<label class="col-xs-9 col-sm-9 col-md-9">Sigueme</label>
 			<div class="col-xs-3 col-sm-3 col-md-3">
 				<input type="checkbox" <?php if($context['me']['n_on_follow']){ ?> checked <?php } ?> class="tgl tgl-ios" id="on_follow" name="on_follow">
 				<label class="tgl-btn" for="on_follow"></label>
@@ -53,14 +53,14 @@
 			<div class="clear"></div>
 		</div>
 		<div class="form-group">
-			<label class="col-xs-9 col-sm-9 col-md-9">{{LANG mentioned_me}}</label>
+			<label class="col-xs-9 col-sm-9 col-md-9">Me mencionó</label>
 			<div class="col-xs-3 col-sm-3 col-md-3">
 				<input type="checkbox" <?php if($context['me']['n_on_mention']){ ?> checked <?php } ?> class="tgl tgl-ios" id="on_mention" name="on_mention">
 				<label class="tgl-btn" for="on_mention"></label>
 			</div>
 			<div class="clear"></div>
 		</div>
-		<div class="pp_load_loader"><button class="btn btn-info pp_flat_btn" type="submit"><span>{{LANG save_changes}}</span></button></div>
+		<div class="pp_load_loader"><button class="btn btn-info pp_flat_btn" type="submit"><span>Guardar cambios</span></button></div>
 		<input type="hidden" name="user_id" value="<?php echo($context['me']['user_id']) ?>">
 		<input type="hidden" name="hash" value="<?php echo($context['csrf_token']) ?>">
 		</div>
