--- a/apps/default/settings/templates/settings/includes/requests.html
+++ b/apps/default/settings/templates/settings/includes/requests.html
@@ -1,6 +1,6 @@
 <div class="prof-active">
 	<div class="header">
-		<h4>{{LANG follow_requests}}</h4>
+		<h4>Seguir las solicitudes</h4>
 		<div class="clear"></div>
 	</div>
 	<hr>
@@ -20,7 +20,7 @@
 							<button type="button" onclick="accept_follow(this,<?php echo($udata['user_id']) ?>)" class="btn accept_follow_btn accept_req" title="{{LANG accept}}">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check"><polyline points="20 6 9 17 4 12"></polyline></svg>
 							</button>
-							<button type="button" onclick="delete_follow(this,<?php echo($udata['user_id']) ?>)" class="btn accept_follow_btn decline_req" title="{{LANG delete}}">
+							<button type="button" onclick="delete_follow(this,<?php echo($udata['user_id']) ?>)" class="btn accept_follow_btn decline_req" title="Borrar">
 								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
 							</button>
 							</div>
