--- a/apps/default/welcome/templates/welcome/reset.html
+++ b/apps/default/welcome/templates/welcome/reset.html
@@ -3,13 +3,13 @@
 		<div class="welcome-page-container row">
 			<div class="pp_welcome_sign marginauto pp_welcome_signup pp_welcome_reset">
 			<div class="logo">
-					<a class="btn btn-link btn_login_back pull-right" href="{{CONFIG site_url}}/welcome"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg> {{LANG sign_in}}</a> 
+					<a class="btn btn-link btn_login_back pull-right" href="{{CONFIG site_url}}/welcome"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg>Iniciar Sesión</a> 
 					<div>
 						<a href="{{CONFIG site_url}}"><img src="{{CONFIG site_url}}/media/img/logo.{{CONFIG logo_extension}}" width="42px" alt="logo"></a>
 					</div>
 				</div>
 				<hr>
-			<h3>{{LANG reset_password}}</h3>
+			<h3>Resetear contraseña</h3>
 				<div class="signin-alert"></div>
 				<form action="" class="form" id="reset-password">
 					<div class="pp_mat_input">
@@ -27,7 +27,7 @@
 					<input type="hidden" value="<?php echo($context['code']) ?>" name="code">
 					
 					
-					<div class="pp_load_loader"><button class="btn btn-info pp_flat_btn" type="submit"><span>{{LANG reset}} <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg></span></button></div>
+					<div class="pp_load_loader"><button class="btn btn-info pp_flat_btn" type="submit"><span>Resetear<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg></span></button></div>
 
 					<input type="hidden" name="hash" value="<?php echo($context['csrf_token']) ?>">
 				</form>
