--- a/apps/default/settings/templates/settings/includes/business_account.html
+++ b/apps/default/settings/templates/settings/includes/business_account.html
@@ -1,6 +1,6 @@
 <div class="sett-active">
 	<div class="header">
-		<h4>{{LANG business_account}}</h4>
+		<h4>Cuenta de negocios</h4>
 		<div class="clear"></div>
 	</div>
 	<hr>
@@ -48,8 +48,8 @@
 			<?php if ($context['me']['verified'] == 0) { ?>
 		<div class="pp_mat_input">
 			<div>
-				<p class="verify_text_1">{{LANG upload_docs}}</p>
-				<p class="verify_text_2">{{LANG select_verif_images}}</p>
+				<p class="verify_text_1">Subir documentos</p>
+				<p class="verify_text_2">Por favor, cargue una foto con su pasaporte / iden...</p>
 			</div>
 			<div class="clear"></div>
 			
@@ -58,7 +58,7 @@
 					<div id="user_image"></div>
 					<div class="upload_fk_image" onclick="document.getElementById('user-photo').click(); return false">
 						<div class="upload_fk_image_content">
-							<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24"><path fill="currentColor" d="M8.5,13.5L11,16.5L14.5,12L19,18H5M21,19V5C21,3.89 20.1,3 19,3H5A2,2 0 0,0 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19Z" /></svg> {{LANG your_photo}}
+							<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24"><path fill="currentColor" d="M8.5,13.5L11,16.5L14.5,12L19,18H5M21,19V5C21,3.89 20.1,3 19,3H5A2,2 0 0,0 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19Z" /></svg> Tu foto
 						</div>
 					</div>
 				</div>
@@ -68,7 +68,7 @@
 					<div id="user_ip"></div>
 					<div class="upload_fk_image" onclick="document.getElementById('ip-photo').click(); return false">
 						<div class="upload_fk_image_content">
-							<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24"><path fill="currentColor" d="M22,4H14V7H10V4H2A2,2 0 0,0 0,6V20A2,2 0 0,0 2,22H22A2,2 0 0,0 24,20V6A2,2 0 0,0 22,4M8,9A2,2 0 0,1 10,11A2,2 0 0,1 8,13A2,2 0 0,1 6,11A2,2 0 0,1 8,9M12,17H4V16C4,14.67 6.67,14 8,14C9.33,14 12,14.67 12,16V17M20,18H14V16H20V18M20,14H14V12H20V14M20,10H14V8H20V10M13,6H11V2H13V6Z" /></svg> {{LANG your_ip}}
+							<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24"><path fill="currentColor" d="M22,4H14V7H10V4H2A2,2 0 0,0 0,6V20A2,2 0 0,0 2,22H22A2,2 0 0,0 24,20V6A2,2 0 0,0 22,4M8,9A2,2 0 0,1 10,11A2,2 0 0,1 8,13A2,2 0 0,1 6,11A2,2 0 0,1 8,9M12,17H4V16C4,14.67 6.67,14 8,14C9.33,14 12,14.67 12,16V17M20,18H14V16H20V18M20,14H14V12H20V14M20,10H14V8H20V10M13,6H11V2H13V6Z" /></svg> Pasaporte / tarjeta de identificación
 						</div>
 					</div>
 				</div>
@@ -78,7 +78,7 @@
 		<div class="clear"></div>
 
 
-		<div class="pp_load_loader"><button class="btn btn-info pp_flat_btn" type="submit"><span>{{LANG send}}</span></button></div>
+		<div class="pp_load_loader"><button class="btn btn-info pp_flat_btn" type="submit"><span>Enviar</span></button></div>
 		<input type="hidden" name="user_id" value="<?php echo($context['me']['user_id']) ?>">
 		<input type="hidden" name="hash" value="<?php echo($context['csrf_token']) ?>">
 		<input type="file" name="passport" class="hidden" id="ip-photo" accept="image/x-png,image/jpg,image/jpeg">
