--- a/apps/default/funding/templates/funding/index.html
+++ b/apps/default/funding/templates/funding/index.html
@@ -103,7 +103,7 @@
                         <?php } } ?>
                     </div>
                     <?php if (count($context['recent']) > 8) { ?>
-                        <!-- <div class="pp_load_loader fund_btn"><button class="btn btn-info pp_flat_btn" onclick="Pxp_LoadMoreFund(this)"><span>{{LANG load_more}}</span></button></div> -->
+                        <!-- <div class="pp_load_loader fund_btn"><button class="btn btn-info pp_flat_btn" onclick="Pxp_LoadMoreFund(this)"><span>Cargar más</span></button></div> -->
                     <?php } ?>
                 </div>
             <?php } ?>
