--- a/apps/default/settings/templates/settings/includes/notifications.html
+++ b/apps/default/settings/templates/settings/includes/notifications.html
@@ -29,7 +29,7 @@
 			<div class="clear"></div>
 		</div>
 		<div class="form-group">
-			<label class="col-xs-9 col-sm-9 col-md-9">{{LANG replied_my_comment}}</label>
+			<label class="col-xs-9 col-sm-9 col-md-9">respondió a mi comentario</label>
 			<div class="col-xs-3 col-sm-3 col-md-3">
 				<input type="checkbox" <?php if($context['me']['n_on_comment_reply']){ ?> checked <?php } ?> class="tgl tgl-ios" id="on_comment_reply" name="on_comment_reply">
 				<label class="tgl-btn" for="on_comment_reply"></label>
@@ -37,7 +37,7 @@
 			<div class="clear"></div>
 		</div>
 		<div class="form-group">
-			<label class="col-xs-9 col-sm-9 col-md-9">{{LANG liked_my_comment}}</label>
+			<label class="col-xs-9 col-sm-9 col-md-9">me gustó mi comentario</label>
 			<div class="col-xs-3 col-sm-3 col-md-3">
 				<input type="checkbox" <?php if($context['me']['n_on_comment_like']){ ?> checked <?php } ?> class="tgl tgl-ios" id="on_comment_like" name="on_comment_like">
 				<label class="tgl-btn" for="on_comment_like"></label>
