--- a/apps/default/edit_ad/templates/edit_ad/index.html
+++ b/apps/default/edit_ad/templates/edit_ad/index.html
@@ -91,7 +91,7 @@
 						<div class="clear"></div>
 					</div>
 				<!-- <div class="form-group">
-				        <label>{{LANG upload_file}}</label>
+				        <label>Subir archivo</label>
 				        <div class="input-group">
 				            <span class="input-group-btn">
 				                <span class="btn btn-default btn-file">
