--- a/apps/default/go_pro/templates/go_pro/index.html
+++ b/apps/default/go_pro/templates/go_pro/index.html
@@ -89,7 +89,7 @@
 				<div id="fake_img_holder"></div>
 				<div class="upload_fk_image" onclick="document.getElementById('upload-image').click(); return false">
 					<div class="upload_fk_image_content">
-						<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24"><path fill="currentColor" d="M9,16V10H5L12,3L19,10H15V16H9M5,20V18H19V20H5Z" /></svg> {{LANG upload_file}}
+						<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24"><path fill="currentColor" d="M9,16V10H5L12,3L19,10H15V16H9M5,20V18H19V20H5Z" /></svg> Subir archivo
 					</div>
 				</div>
 			</div>
@@ -198,7 +198,7 @@ $(document).ready(function() {
 
 	function Pxp_BankPayment(type) {
 		var click_event = "$('#upload-image').trigger('click');";
-		$(".images-renderer").html('<div class="select-images" onclick="'+click_event+'"><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-image"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect><circle cx="8.5" cy="8.5" r="1.5"></circle><polyline points="21 15 16 10 5 21"></polyline></svg><h5>{{LANG choose_an_image}}</h5></span></div>');
+		$(".images-renderer").html('<div class="select-images" onclick="'+click_event+'"><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-image"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect><circle cx="8.5" cy="8.5" r="1.5"></circle><polyline points="21 15 16 10 5 21"></polyline></svg><h5>Elige una imagen</h5></span></div>');
 		$('#configreset').click();
 		$('.bank_payment--modal').fadeIn(250);
 	}
