--- a/apps/default/main/templates/includes/lightbox.html
+++ b/apps/default/main/templates/includes/lightbox.html
@@ -38,7 +38,7 @@
 							<div class="is_should_hide2">
 								<p class="is_should_hide3">Advertencia: esta publicación puede contener imáge...</p>
 								<div class="is_should_hide4">
-									<a class="is_should_hide5" href="javascript:void(0);" onclick="show_m_reprted(<?php echo($context['post_data']['post_id']) ?>)">{{LANG click_to_see}}</a>
+									<a class="is_should_hide5" href="javascript:void(0);" onclick="show_m_reprted(<?php echo($context['post_data']['post_id']) ?>)">Click para ver</a>
 								</div>
 							</div>
 						</div>
