--- a/apps/default/main/templates/js/extra-js.html
+++ b/apps/default/main/templates/js/extra-js.html
@@ -27,7 +27,7 @@
 				}
 			}
 			else if (object.hasClass('btn-following') == false && object.hasClass('btn-requested') == false) {
-				object.find('span').text("{{LANG requested}}");
+				object.find('span').text("Pedido");
 				object.find('svg').html('<path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><polyline points="17 11 19 13 23 9"></polyline>');
 
 				if (!object.hasClass('btn-requested')) {
