--- a/apps/default/profile/templates/profile/includes/boost.html
+++ b/apps/default/profile/templates/profile/includes/boost.html
@@ -8,9 +8,9 @@
 			</div>
 			<div class="is_should_hide1 text_m_reprted-<?php echo($post_data['post_id']) ?>">
 				<div class="is_should_hide2">
-					<p class="is_should_hide3">{{LANG post_m_report}}</p>
+					<p class="is_should_hide3">Advertencia: esta publicación puede contener imáge...</p>
 					<div class="is_should_hide4">
-						<a class="is_should_hide5" href="javascript:void(0);" onclick="show_m_reprted(<?php echo($post_data['post_id']) ?>)">{{LANG click_to_see}}</a>
+						<a class="is_should_hide5" href="javascript:void(0);" onclick="show_m_reprted(<?php echo($post_data['post_id']) ?>)">Click para ver</a>
 					</div>
 				</div>
 			</div>
