--- a/apps/default/profile/templates/profile/includes/fav.html
+++ b/apps/default/profile/templates/profile/includes/fav.html
@@ -10,7 +10,7 @@
 				<div class="is_should_hide2">
 					<p class="is_should_hide3">Advertencia: esta publicación puede contener imágenes dañinas u ofensivas o contenido para adultos (mayores de 18 años).</p>
 					<div class="is_should_hide4">
-						<a class="is_should_hide5" href="javascript:void(0);" onclick="show_m_reprted(<?php echo($post_data['post_id']) ?>)">{{LANG click_to_see}}</a>
+						<a class="is_should_hide5" href="javascript:void(0);" onclick="show_m_reprted(<?php echo($post_data['post_id']) ?>)">Click para ver</a>
 					</div>
 				</div>
 			</div>
