--- a/apps/default/profile/templates/profile/index.html
+++ b/apps/default/profile/templates/profile/index.html
@@ -6,7 +6,7 @@
 					<img src="<?php echo $context['user_data']['avatar']; ?>" class="img-circle">
 					<?php if ($config['raise_money'] == 'on' && !empty($context['fund'])) { ?>
 						<?php if ($config['raise_money_type'] == 0 || ($config['raise_money_type'] == 1 && $context['user_data']['verified'])) { ?>
-						<a href="{{CONFIG site_url}}/user_funding/<?php echo($context['user_data']['username']) ?>" class="usr_prof_fundng" data-ajax="ajax_loading.php?app=user_funding&apph=user_funding&user=<?php echo($context['user_data']['username']) ?>" title="{{LANG user_funding}}">
+						<a href="{{CONFIG site_url}}/user_funding/<?php echo($context['user_data']['username']) ?>" class="usr_prof_fundng" data-ajax="ajax_loading.php?app=user_funding&apph=user_funding&user=<?php echo($context['user_data']['username']) ?>" title="Usuario de financiación">
 							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M13,16.915V18h-2v-1.08 C8.661,16.553,8,14.918,8,14h2c0.011,0.143,0.159,1,2,1c1.38,0,2-0.585,2-1c0-0.324,0-1-2-1c-3.48,0-4-1.88-4-3 c0-1.288,1.029-2.584,3-2.915V6.012h2v1.109c1.734,0.41,2.4,1.853,2.4,2.879h-1l-1,0.018C13.386,9.638,13.185,9,12,9 c-1.299,0-2,0.516-2,1c0,0.374,0,1,2,1c3.48,0,4,1.88,4,3C16,15.288,14.971,16.584,13,16.915z"/></svg>
 						</a>
 					<?php } } ?>
@@ -31,12 +31,12 @@
 									<li><a href="{{CONFIG site_url}}/settings/notifications/{{ME username}}" data-ajax="ajax_loading.php?app=settings&apph=settings&user=<?php echo($context['user_data']['username']) ?>&page=notifications">Notificaciones</a></li>
 
 									<?php if ($config['business_account'] == 'on' && $context['user_data']['business_account']) { ?>
-										<li><a href="{{CONFIG site_url}}/account_analytics" data-ajax="ajax_loading.php?app=account_analytics&apph=account_analytics">{{LANG account_analytics}}</a></li>
+										<li><a href="{{CONFIG site_url}}/account_analytics" data-ajax="ajax_loading.php?app=account_analytics&apph=account_analytics">Análisis de cuentas</a></li>
 									<?php } ?>
 									
 									<?php if ($config['raise_money'] == 'on') { ?>
 										<?php if ($config['raise_money_type'] == 0 || ($config['raise_money_type'] == 1 && $context['user_data']['verified'])) { ?>
-										<li><a href="{{CONFIG site_url}}/funding_acquisition" data-ajax="ajax_loading.php?app=funding_acquisition&apph=funding_acquisition">{{LANG funding_acquisition}}</a></li>
+										<li><a href="{{CONFIG site_url}}/funding_acquisition" data-ajax="ajax_loading.php?app=funding_acquisition&apph=funding_acquisition">Crear nueva solicitud de financiación</a></li>
 									<?php } } ?>
 									
 									<li><a href="{{CONFIG site_url}}/signout">Cerrar Sesión</a></li>
@@ -89,7 +89,7 @@
 							<ul class="list-unstyled">
 								<?php if (!empty($context['user_data']['b_phone'])) { ?>
 									<li>
-										<a href="javascript:void(0);" onclick="window.location.href = 'tel:<?php echo($context['user_data']['b_phone']) ?>'"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M6.62,10.79C8.06,13.62 10.38,15.94 13.21,17.38L15.41,15.18C15.69,14.9 16.08,14.82 16.43,14.93C17.55,15.3 18.75,15.5 20,15.5A1,1 0 0,1 21,16.5V20A1,1 0 0,1 20,21A17,17 0 0,1 3,4A1,1 0 0,1 4,3H7.5A1,1 0 0,1 8.5,4C8.5,5.25 8.7,6.45 9.07,7.57C9.18,7.92 9.1,8.31 8.82,8.59L6.62,10.79Z" /></svg> <span>{{LANG call_now}}</span></a>
+										<a href="javascript:void(0);" onclick="window.location.href = 'tel:<?php echo($context['user_data']['b_phone']) ?>'"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M6.62,10.79C8.06,13.62 10.38,15.94 13.21,17.38L15.41,15.18C15.69,14.9 16.08,14.82 16.43,14.93C17.55,15.3 18.75,15.5 20,15.5A1,1 0 0,1 21,16.5V20A1,1 0 0,1 20,21A17,17 0 0,1 3,4A1,1 0 0,1 4,3H7.5A1,1 0 0,1 8.5,4C8.5,5.25 8.7,6.45 9.07,7.57C9.18,7.92 9.1,8.31 8.82,8.59L6.62,10.79Z" /></svg> <span>Llama ahora</span></a>
 									</li>
 								<?php } ?>
 								<?php if (!empty($context['user_data']['b_site'])) { ?>
@@ -115,7 +115,7 @@
 
 						 ?>
 							<button class="btn btn-follow btn-requested animated fadeInUpBig" onclick="follow(<?php echo $context['user_data']['user_id']; ?> ,this);" data-profile-type="<?php echo($context['user_data']['p_privacy']) ?>">
-								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user-check"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><polyline points="17 11 19 13 23 9"></polyline></svg> <span>{{LANG requested}}</span>
+								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user-check"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><polyline points="17 11 19 13 23 9"></polyline></svg> <span>Petición</span>
 							</button>
 						<?php }elseif($context['is_following'] > 0){ ?>
 							<button class="btn btn-follow btn-following animated fadeInUpBig" onclick="follow(<?php echo $context['user_data']['user_id']; ?> ,this);" data-profile-type="<?php echo($context['user_data']['p_privacy']) ?>">
@@ -172,7 +172,7 @@
 						<?php if($context['user_data']['is_pro']){ ?>
 						<li class="nav-item <?php if($context['page'] == 'boosted_posts'){ ?>active<?php } ?>">
 							<a class="nav__item"  <?php if($context['boosted_posts_count']){ ?>href="<?php echo($context['user_data']['url']) ?>/boosted_posts" data-ajax="ajax_loading.php?app=profile&apph=profile&uname=<?php echo($context['user_data']['username']) ?>&page=boosted_posts"<?php } ?>>
-								<?php echo $context['boosted_posts_count']; ?><span>{{LANG boosted_posts}}</span>
+								<?php echo $context['boosted_posts_count']; ?><span>Publicaciones mejoradas</span>
 							</a>
 						</li>
 						<?php } ?>
@@ -244,7 +244,7 @@
 						<li class="list-group-item" onclick="report_profile('<?php echo($context['user_data']['user_id']) ?>',3);"><a href="javascript:void(0);">Amenazas violentas</a></li>
 						<li class="list-group-item" onclick="report_profile('<?php echo($context['user_data']['user_id']) ?>',4);"><a href="javascript:void(0);">Contenido sexual</a></li>
 						<li class="list-group-item" onclick="report_profile('<?php echo($context['user_data']['user_id']) ?>',5);"><a href="javascript:void(0);">Niños que no han alcanzado la edad requerida</a></li>
-						<li class="list-group-item" onclick="report_profile('<?php echo($context['user_data']['user_id']) ?>',6);"><a href="javascript:void(0);">{{LANG report_t6}}</a></li>
+						<li class="list-group-item" onclick="report_profile('<?php echo($context['user_data']['user_id']) ?>',6);"><a href="javascript:void(0);">Cuentas que expresan odio</a></li>
 						<li class="list-group-item" onclick="report_profile('<?php echo($context['user_data']['user_id']) ?>',7);"><a href="javascript:void(0);">Spam o publicidad</a></li>
 						<li class="list-group-item" onclick="report_profile('<?php echo($context['user_data']['user_id']) ?>',8);"><a href="javascript:void(0);">Material con copyright</a></li>
 					</ul>
