--- a/apps/default/settings/templates/settings/includes/business_account.html
+++ b/apps/default/settings/templates/settings/includes/business_account.html
@@ -6,7 +6,7 @@
 	<hr>
 	<?php if ($context['bus_requested'] > 0) { ?>
 	<div class="verify_h"> 
-		<h4 class="text-center">{{LANG bus_request_done}}</h4>
+		<h4 class="text-center">Peticion de negocios hecha</h4>
 	</div>
 	<?php } else{ ?>
 	<form class="form row pp_sett_form" id="business-profile-settings">
@@ -17,7 +17,7 @@
 					<div class="pp_mat_input">
 						<input type="text" name="business_name" class="form-control">
 						<span class="bar"></span>
-						<label>{{LANG business_name}}</label>
+						<label>Nombre del Negocio</label>
 					</div>
 				</div>
 				<div class="col-md-6">
@@ -33,7 +33,7 @@
 					<div class="pp_mat_input">
 						<input type="text" name="phone" class="form-control">
 						<span class="bar"></span>
-						<label>{{LANG phone_number}}</label>
+						<label>Número de teléfono</label>
 					</div>
 				</div>
 				<div class="col-md-6">
