--- a/apps/default/settings/templates/settings/includes/general.html
+++ b/apps/default/settings/templates/settings/includes/general.html
@@ -52,7 +52,7 @@
 			<div class="pp_mat_input" style="margin-bottom: 1.7em;">
 				<input required="true" type="wallet" name="wallet" class="form-control" value="<?php echo($context['me']['wallet']) ?>">
 				<span class="bar"></span>
-				<label>{{LANG wallet}}</label>
+				<label>Billetera</label>
 			</div>
 			<div class="form-group">
 				<label class="col-xs-9 col-sm-9 col-md-9">Activar usuario</label>
@@ -71,7 +71,7 @@
 				<div class="clear"></div>
 			</div>
 			<div class="form-group">
-				<label class="col-xs-9 col-sm-9 col-md-9">{{LANG pro_member}}</label>
+				<label class="col-xs-9 col-sm-9 col-md-9">Miembro Pro</label>
 				<div class="col-xs-3 col-sm-3 col-md-3">
 					<input type="checkbox" <?php if($context['me']['is_pro'] == 1){ ?> checked <?php } ?> class="tgl tgl-ios" id="is_pro" name="is_pro">
 					<label class="tgl-btn" for="is_pro"></label>
