--- a/apps/default/settings/templates/settings/includes/my_affiliates.html
+++ b/apps/default/settings/templates/settings/includes/my_affiliates.html
@@ -1,6 +1,6 @@
 <div class="sett-active blocked-users-settings">
 	<div class="header">
-		<h4>{{LANG my_affiliates}}</h4>
+		<h4>Mis afiliados</h4>
 		<div class="clear"></div>
 	</div>
 	<hr>
@@ -89,7 +89,7 @@
 					<div class="col-md-4">
 						<div class="aff_hiw">
 							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#4caf50" d="M3,6H21V18H3V6M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9M7,8A2,2 0 0,1 5,10V14A2,2 0 0,1 7,16H17A2,2 0 0,1 19,14V10A2,2 0 0,1 17,8H7Z" /></svg>
-							<h2>{{LANG earn_money}}<div class="bg_number">3</div></h2>
+							<h2>Ganar dinero<div class="bg_number">3</div></h2>
 						</div>
 					</div>
 				</div>
