--- a/apps/default/settings/templates/settings/includes/privacy.html
+++ b/apps/default/settings/templates/settings/includes/privacy.html
@@ -31,7 +31,7 @@
 			<div class="clear"></div>
 		</div>
 		<div class="form-group">
-			<label class="col-xs-9 col-sm-9 col-md-9">{{LANG profile_search}}</label>
+			<label class="col-xs-9 col-sm-9 col-md-9">Buscar perfil</label>
 			<div class="col-xs-3 col-sm-3 col-md-3">
 				<input type="checkbox" <?php if($context['me']['search_engines']){ ?> checked <?php } ?> class="tgl tgl-ios" id="search_engines" name="search_engines">
 				<label class="tgl-btn" for="search_engines"></label>
