--- a/apps/default/confirm/templates/confirm/index.html
+++ b/apps/default/confirm/templates/confirm/index.html
@@ -5,7 +5,7 @@
 				<div class="pp_intro_innr">
 					<div>
 						<h1 class="animated fadeInUpBig">Correo electrónico confirmado</h1>
-						<span class="fluid copyright">Copyright &copy; 2018 {{CONFIG site_name}}</span>
+						<span class="fluid copyright">Copyright &copy; 2021 ValleyFair</span>
 					</div>
 				</div>
 			</div>
