--- a/apps/default/home/templates/home/includes/create-story.html
+++ b/apps/default/home/templates/home/includes/create-story.html
@@ -8,7 +8,7 @@
 	</div>
   	<form class="form" id="add-story-from" action="{{CONFIG site_url}}/aj/story/add">
 		<div class="form-group">
-      		<textarea class="form-control" name="caption" rows="3" placeholder="Add a story caption.."></textarea>
+      		<textarea class="form-control" name="caption" rows="3" placeholder="Agrega el titulo de la historia..."></textarea>
       	</div>
       	<div class="form-group">
   			<div class="form-control selecet-file-control" onclick="$('#story-file').trigger('click');">
