--- a/apps/default/welcome/templates/welcome/index.html
+++ b/apps/default/welcome/templates/welcome/index.html
@@ -107,7 +107,7 @@
 					if (data.status == 200) {
 					    $(".signin-alert").html($('<div>',{
 							class: 'alert alert-success',
-							text: 'you were successfully logged in, please wait...'
+							text: 'Ha iniciado sesión correctamente, Bienvenido ...'
 						}));
 						
 						setTimeout(function(){
