--- a/apps/default/ads/templates/ads/create.html
+++ b/apps/default/ads/templates/ads/create.html
@@ -31,9 +31,9 @@
 						<label>Descripción</label>
 					</div>
 					<div class="pp_mat_select ads_select_country_input">
-						<label class="pp_mat_label">País</label>
+						<label class="pp_mat_label">Carrera</label>
 						<div>
-							 <select class="form-control selectpicker show-menu-arrow show-tick" multiple name="country[]" data-live-search="true" title="País" data-actions-box="true">
+							 <select class="form-control selectpicker show-menu-arrow show-tick" multiple name="country[]" data-live-search="true" title="Carrera" data-actions-box="true">
 				              	<?php foreach ($context['countries_name'] as $cid => $cname) { ?>
 									<option value="<?php echo($cid) ?>">
 										<?php echo $cname; ?>
