--- a/apps/default/startup/templates/startup/info.html
+++ b/apps/default/startup/templates/startup/info.html
@@ -19,7 +19,7 @@
 						<span class="bar"></span>
 					</div>
 					<div class="pp_mat_select">
-						<label class="pp_mat_label">País</label>
+						<label class="pp_mat_label">Carrera</label>
 						<div>
 							<select name="country" class="form-control">
 								<?php foreach ($context['countries_name'] as $cid => $cname) { ?>
