--- a/apps/default/settings/templates/settings/includes/general.html
+++ b/apps/default/settings/templates/settings/includes/general.html
@@ -33,7 +33,7 @@
 			<div class="clear"></div>
 		</div>
 		<div class="pp_mat_select">
-			<label class="pp_mat_label">País</label>
+			<label class="pp_mat_label">Carrera</label>
 			<div>
 				<select name="country" class="form-control">
 					<?php foreach ($context['countries_name'] as $cid => $cname) { ?>
